--- a/styles/libs/_text-animation.scss
+++ b/styles/libs/_text-animation.scss
@@ -1,8 +1,6 @@
-.clip-text,
-.clip-text01,
-.clip-text02,
-.clip-text03,
-.clip-text04 {
+.clip-js1,
+.clip-js2,
+.clip-text {
   // position: relative;
   // display: inline-block;
   transition: all 3s ease;
