--- a/styles/libs/_svg-animation.scss
+++ b/styles/libs/_svg-animation.scss
@@ -26,7 +26,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  animation: byeOpening 5s forwards;
+  animation: byeOpening 5.6s forwards;
 
   & .svg-inner {
     padding: 10vw;
@@ -39,17 +39,17 @@
   }
 }
 
-.outview.svg-animation {
-  transition: all 2s;
-  display: none;
-}
-
 @keyframes byeOpening {
+
   0% {
     opacity: 0;
   }
 
-  70% {
+  20% {
+    opacity: 1;
+  }
+
+  50% {
     opacity: 1;
   }
 
