--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,7 @@
   right: 0;
   bottom: 0;
   z-index: 99999;
-  background-color: #fff;
+  background-color: #d49a9a;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -33,8 +33,8 @@
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
-  -webkit-animation: byeOpening 5.6s forwards;
-          animation: byeOpening 5.6s forwards;
+  -webkit-animation: byeOpening 6s forwards;
+          animation: byeOpening 6s forwards;
 }
 
 .svg-animation .svg-inner {
@@ -48,13 +48,7 @@
 }
 
 @-webkit-keyframes byeOpening {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 1;
-  }
-  50% {
+  70% {
     opacity: 1;
   }
   100% {
@@ -65,13 +59,7 @@
 }
 
 @keyframes byeOpening {
-  0% {
-    opacity: 0;
-  }
-  20% {
-    opacity: 1;
-  }
-  50% {
+  70% {
     opacity: 1;
   }
   100% {
