--- a/styles/libs/_svg-animation.scss
+++ b/styles/libs/_svg-animation.scss
@@ -1,17 +1,16 @@
 .cls-1 {
-  fill: #231815;
+  fill: #0d0c0d;
 }
 
 .cls-2 {
-  fill: #070102;
+  fill: #0e0d0d;
 }
 
 .cls-3 {
   fill: none;
   stroke: #fff;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 14px;
+  stroke-miterlimit: 10;
+  stroke-width: 9px;
   opacity: 1;
 }
 
@@ -34,7 +33,7 @@
     animation: byeOpening 6s forwards;
 
     & .svg-inner {
-      padding: 35px;
+      padding: 20px;
 
       & svg {
         height: 100%;
