--- a/styles/style.css
+++ b/styles/style.css
@@ -1,18 +1,17 @@
 @charset "UTF-8";
 .cls-1 {
-  fill: #231815;
+  fill: #0d0c0d;
 }
 
 .cls-2 {
-  fill: #070102;
+  fill: #0e0d0d;
 }
 
 .cls-3 {
   fill: none;
   stroke: #fff;
-  stroke-linecap: round;
-  stroke-linejoin: round;
-  stroke-width: 14px;
+  stroke-miterlimit: 10;
+  stroke-width: 9px;
   opacity: 1;
 }
 
@@ -42,7 +41,7 @@
 }
 
 .pace-done .svg-animation .svg-inner {
-  padding: 35px;
+  padding: 20px;
 }
 
 .pace-done .svg-animation .svg-inner svg {
