--- a/styles/libs/_svg-animation.scss
+++ b/styles/libs/_svg-animation.scss
@@ -18,6 +18,12 @@
   display: none;
 }
 
+.pace-ruuning {
+  .superwrapper {
+    display: none;
+  }
+}
+
 .pace-done {
   .svg-animation {
     position: fixed;
