--- a/styles/style.css
+++ b/styles/style.css
@@ -19,6 +19,10 @@
   display: none;
 }
 
+.pace-running .superwrapper {
+  display: none;
+}
+
 .pace-done .svg-animation {
   position: fixed;
   top: 0;
