--- a/styles/breakpoints/_1200up.scss
+++ b/styles/breakpoints/_1200up.scss
@@ -51,3 +51,14 @@ Stylesheet: 1200px以上のモニタで適用
     transform: rotate(7deg);
   }
 }
+
+.footer {
+  &__nav {
+    & li {
+      & a {
+        font-size: 26px;
+      }
+    }
+  }
+
+}
