--- a/styles/breakpoints/_960up.scss
+++ b/styles/breakpoints/_960up.scss
@@ -42,6 +42,8 @@ Stylesheet: 960px以上のモニタで適用
 
 .header {
   height: 120px;
+  display: flex;
+  width: 100%;
 
   .logo__img {
     top: 31%;
@@ -60,14 +62,11 @@ Stylesheet: 960px以上のモニタで適用
   }
 
   .pc-container {
-    // position: absolute;
-    // top: 0;
-    // right: 0;
-    margin-left: 35vw;
     width: 100%;
+    height: 100%;
     display: flex;
     align-items: center;
-    height: 100%;
+    justify-content: flex-end;
 
     .pc-header {
       &__list {
@@ -277,4 +276,11 @@ Stylesheet: 960px以上のモニタで適用
 
 .hero__footer {
   top: 25.5%;
+}
+
+//* * * * * company-page * * * * * *
+.company {
+  &__item {
+    font-size: 24px;
+  }
 }
