--- a/styles/style.css
+++ b/styles/style.css
@@ -572,11 +572,12 @@ Stylesheet: ベーススタイル
 }
 
 .footer__nav li {
-  padding-top: 6vw;
+  padding-top: 8vw;
 }
 
 .footer__nav li a {
   color: #4e4949;
+  font-size: 16px;
 }
 
 .footer .back-btn {
@@ -609,7 +610,7 @@ Stylesheet: ベーススタイル
 
 .footer__logo {
   text-align: center;
-  margin: 30px;
+  margin: 20px;
 }
 
 .footer__logo > img {
@@ -632,6 +633,130 @@ Stylesheet: ベーススタイル
 
 .mobile-menu a {
   color: #4e4949;
+}
+
+.c-top-view {
+  margin-top: 20vw;
+  margin: 0 auto;
+}
+
+.c-top-view__img {
+  margin: 0 auto;
+  height: 280px;
+  max-width: 1080px;
+  margin-top: 24vw;
+  background-image: url(/images/city@mobile.jpg);
+  background-size: 151%;
+  background-repeat: no-repeat;
+  -webkit-transform: rotate(353deg);
+          transform: rotate(353deg);
+}
+
+@media (min-width: 600px) {
+  .c-top-view__img {
+    height: 327px;
+    background-size: 105%;
+  }
+}
+
+@media (min-width: 960px) {
+  .c-top-view__img {
+    height: 327px;
+    background-size: 105%;
+  }
+}
+
+@media (min-width: 1200px) {
+  .c-top-view__img {
+    height: 327px;
+    background-size: 90%;
+  }
+}
+
+.c-top-view__cover {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  background-color: #030383;
+  opacity: .2;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.c-top-view .title {
+  font-size: 3.8rem;
+  letter-spacing: 4px;
+  color: #fff;
+  -webkit-transform: rotate(7deg);
+          transform: rotate(7deg);
+}
+
+.company {
+  margin-top: 20vw;
+}
+
+.company__title {
+  text-align: center;
+}
+
+.company__title .en {
+  font-size: 2rem;
+  letter-spacing: 5px;
+  margin-bottom: 0;
+}
+
+.company__title .ja {
+  margin-top: 0;
+  color: #9e9e9e;
+  font-size: 1rem;
+  font-weight: 300;
+  letter-spacing: 4px;
+}
+
+.company__list {
+  padding: 10vw 0 15vw 0;
+}
+
+.company__list a {
+  display: block;
+  color: #333;
+}
+
+.company__item {
+  padding-bottom: 3vw;
+}
+
+.p-rule {
+  margin-top: 20vw;
+  letter-spacing: 2px;
+  line-height: 2;
+  font-size: .6rem;
+  text-align: left;
+}
+
+.p-rule__title {
+  margin-top: 10vw;
+}
+
+.p-rule__inner {
+  padding: 20vw 10vw;
+}
+
+.p-rule-item-text {
+  padding-bottom: 3vw;
+}
+
+.p-rule-item-text a {
+  color: #1d1d1d;
 }
 
 body {
@@ -1914,6 +2039,12 @@ Stylesheet: 600px以上のタブレットやモニタで適用
   .hero__footer {
     top: 29%;
   }
+  .footer__nav li a {
+    font-size: 18px;
+  }
+  .footer__logo img {
+    width: 9%;
+  }
 }
 
 @media (min-width: 960px) {
@@ -1952,6 +2083,10 @@ Stylesheet: 960px以上のモニタで適用
   }
   .header {
     height: 120px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    width: 100%;
   }
   .header .logo__img {
     top: 31%;
@@ -1967,15 +2102,17 @@ Stylesheet: 960px以上のモニタで適用
     display: none;
   }
   .header .pc-container {
-    margin-left: 35vw;
     width: 100%;
+    height: 100%;
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-align: center;
         -ms-flex-align: center;
             align-items: center;
-    height: 100%;
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
   }
   .header .pc-container .pc-header__list {
     display: -webkit-box;
@@ -2153,6 +2290,9 @@ Stylesheet: 960px以上のモニタで適用
   .hero__footer {
     top: 25.5%;
   }
+  .company__item {
+    font-size: 24px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -2208,6 +2348,9 @@ Stylesheet: 1200px以上のモニタで適用
     color: #fff;
     -webkit-transform: rotate(7deg);
             transform: rotate(7deg);
+  }
+  .footer__nav li a {
+    font-size: 26px;
   }
 }
 /*# sourceMappingURL=style.css.map */
